--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,10 +1,14 @@
 <h1>TEYVAT ITEM TRACKER</h1>
 
 <h5>Name: </h5>
-<p>{{ name }}</p> <!-- Ubahlah sesuai dengan nama kamu -->
+<p>{{ name }}</p>
 <h5>Description: </h5>
-<p>{{ desc }}</p> <!-- Ubahlah sesuai dengan kelas kamu -->
+<p>{{ desc }}</p> 
 <h5>Amount: </h5>
 <p>{{ amt }}</p>
 <h5>Category: </h5>
 <p>{{ category }}</p>
+
+<footer>
+    <p>Dibuat oleh Fiona</p>
+</footer>
