--- a/main/templates/create_item.html
+++ b/main/templates/create_item.html
@@ -1,19 +1,65 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-<h1 style="text-align: center;color: rgb(0, 19, 96);font-family: Verdana;">Add New Item</h1>
+<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #2E4374;
+    }
 
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Add Item" style="background-color: rgb(0, 19, 96); color: white; padding: 10px 20px; border: none; text-align: center; display: inline-block; font-size: 16px;"/>
-            </td>
-        </tr>
-    </table>
-</form>
+    .create_item {
+        text-align: center;
+        background-color: #E5C3A6;
+        border-radius: 5px;
+        width: 100%; 
+        max-width: 500px;
+        padding: 30px;
+    }
+
+    /* Style untuk input */
+    input[type="text"],
+    input[type="password"],
+    input[type="submit"] {
+        width: 100%;
+        padding: 20px;
+        margin: 5px 0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    /* Style untuk tombol "Add Item" */
+    input[type="submit"] {
+        background-color: rgb(0, 19, 96);
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        cursor: pointer;
+    }
+</style>
+
+<div class = "create_item">
+    <h1>Add New Item</h1>
+    
+    <form method="POST">
+        {% csrf_token %}
+        <table>
+            {{ form.as_table }}
+            <tr>
+                <td></td>
+                <td>
+                    <input type="submit" value="Add Item"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+</div>
 
 {% endblock %}
