--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -5,6 +5,49 @@
 {% endblock meta %}
 
 {% block content %}
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; 
+            margin: 0;
+            padding: 20px; 
+            background: linear-gradient(to top, #7C81AD, #2E4374);
+        }
+
+        .login {
+            text-align: center;
+            background-color: #E5C3A6; 
+            border-radius: 5px;
+            width: 80%; 
+            max-width: 400px;
+            padding: 30px;
+        }
+
+        /* Style untuk tabel */
+        table {
+            width: 100%; 
+            margin-top: 10px;
+        }
+
+        /* Style untuk input */
+        .form-control {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        /* Style untuk tombol Login */
+        .login_btn {
+            background-color: #2E4374;
+            color: #fff;
+            cursor: pointer;
+        }
+    </style>
+
 
 <div class = "login">
 
