--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -4,10 +4,55 @@
     <title>Pendaftaran</title>
 {% endblock meta %}
 
-{% block content %}  
+{% block content %}
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            padding: 20px; 
+            background: linear-gradient(to top, #7C81AD, #2E4374);
+        }
+
+        /* Style untuk bagian login nya*/
+        .login {
+            text-align: center;
+            background-color: #E5C3A6; 
+            border-radius: 5px;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2); 
+            width: 80%;
+            max-width: 600px;
+            padding: 30px;
+        }
+
+        /* Style untuk tabelnya */
+        table {
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        /* Style untuk input */
+        input[type="text"],
+        input[type="password"],
+        input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        /* Style untuk tombol daftar */
+        input[type="submit"] {
+            background-color: #2E4374;
+            color: #fff;
+            cursor: pointer;
+        }
+    </style>
 
 <div class = "login">
-    
     <h1>Register</h1>  
 
         <form method="POST" >  
