--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -216,6 +216,14 @@
                 <td>${item.fields.category}</td>
                 <td>${item.fields.price}</td>
                 <td>${item.fields.date_added}</td>
+                <td>
+                <a href="edit-item/${item.pk}">
+                        <button>Edit</button>
+                    </a>
+                <a href="delete-item/${item.pk}">
+                        <button>Delete</button>
+                    </a>
+            </td>
             </tr>` 
             })
             
